@@ -1,6 +1,7 @@
 Revision history for MIDI-Util
 
 {{$NEXT}}
+    - Add the midi_format() function.
 
 0.0402 2019-12-06 06:49:51
     - Only set the patch if given a patch.
